[package]
name = "storm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]
members = [
  "crates/storm-adpcm",
  "crates/storm-chk",
  "crates/storm-core",
  "crates/storm-files",
  "crates/storm-huffman",
  "crates/storm-pklib",
  "crates/storm-sparse",
  "crates/storm-utils",
]
