[package]
name = "storm-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# Core
byteorder = { version = "1.4", default-features = false, features = ["std"] }
storm-utils = { version = "=0.1", path = "../storm-utils", default-features = false }

# Compression
bzip2 = { version = "0.4", default-features = false, optional = true }
flate2 = { version = "1.0", default-features = false, optional = true, features = ["rust_backend"] }
storm-adpcm = { version = "=0.1", path = "../storm-adpcm", optional = true, features = ["std"] }
storm-huffman = { version = "=0.1", path = "../storm-huffman", optional = true, features = ["std"] }
storm-pklib = { version = "=0.1", path = "../storm-pklib", optional = true, features = ["std"] }
storm-sparse = { version = "=0.1", path = "../storm-sparse", optional = true, features = ["std"] }

[features]
default = []

# Enables ADPCM Compression
adpcm = ["dep:storm-adpcm"]

# Enables BZip2 Compression
bzip2 = ["dep:bzip2"]

# Enables Huffman Coding Compression
huffman = ["dep:storm-huffman"]

# Enables PKWare Compression
pkware = ["dep:storm-pklib"]

# Enables Sparse Compression
sparse = ["dep:storm-sparse"]

# Enables ZLib Compression
zlib = ["dep:flate2"]
