[package]
name = "storm-pklib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[build-dependencies]
bindgen = { version = "0.68", default-features = false, features = ["runtime"] }
cmake = { version = "0.1", default-features = false }

[features]
default = []

# Enables functionality requiring `std`.
std = []
